improved rate limiting

--- a/.env.dist
+++ b/.env.dist
@@ -1,2 +1,5 @@
 MEGAVERSE_API_URL=https://challenge.crossmint.io/api
 CANDIDATE_ID=""
+
+# One request every x milliseconds. This is required to avoid throttling
+MILLISECONDS_PER_REQUEST=2000
